--- a/pympress/share/locale/es/pympress.po
+++ b/pympress/share/locale/es/pympress.po
@@ -133,6 +133,10 @@ msgctxt "shortcut window"
 msgid "Next slide"
 msgstr ""
 
+msgctxt "shortcut window"
+msgid "Next slide with different label"
+msgstr ""
+
 msgid "No action was defined for this link"
 msgstr "No se definió ninguna acción para este enlace"
 
@@ -186,6 +190,10 @@ msgstr "Presentación a pantalla completa"
 
 msgctxt "shortcut window"
 msgid "Previous slide"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Previous slide with different label"
 msgstr ""
 
 msgid "Pympress Content"
