--- a/pympress/share/locale/pympress.pot
+++ b/pympress/share/locale/pympress.pot
@@ -130,6 +130,10 @@ msgctxt "shortcut window"
 msgid "Next slide"
 msgstr ""
 
+msgctxt "shortcut window"
+msgid "Next slide with different label"
+msgstr ""
+
 msgid "No action was defined for this link"
 msgstr ""
 
@@ -183,6 +187,10 @@ msgstr ""
 
 msgctxt "shortcut window"
 msgid "Previous slide"
+msgstr ""
+
+msgctxt "shortcut window"
+msgid "Previous slide with different label"
 msgstr ""
 
 msgid "Pympress Content"
