Add 'continous mode' for laser pointer
'Continous mode' shows the laser pointer (following the
mouse curser) permanently on the slides.
It can be activated either from the menu, or with shortcut L

--- a/pympress/share/locale/de/pympress.po
+++ b/pympress/share/locale/de/pympress.po
@@ -376,6 +376,9 @@ msgstr "_Ende"
 msgid "_Left"
 msgstr "_Links"
 
+msgid "_Manual"
+msgstr "_Manuell"
+
 msgid "_Navigation"
 msgstr "_Navigation"
 
@@ -387,6 +390,9 @@ msgstr "_Notizmodus"
 
 msgid "_Pause timer"
 msgstr "Timer _pausieren"
+
+msgid "_Permanent"
+msgstr "_Ständig"
 
 msgid "_Presentation"
 msgstr "_Präsentation"
